--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 		<title>Cálculo de Lineas Aereas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property="og:image:secure_url" content="https://andrescastillo0022.github.io/tecnicas-de-transporte-de-energia/images/1340x900.jpg" />
-		<meta property="og:image:width" content="670" />
-		<meta property="og:image:height" content="450" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
@@ -1640,7 +1637,7 @@ if(res_tipo === "Brahma/AW"){
 		
 	</head>
 	<body>
-
+<img class="portada" src="images/1340x900.jpg" alt="portada">
 		<!-- Wrapper -->
 			<div id="wrapper">
 
