--- a/index.html
+++ b/index.html
@@ -1637,7 +1637,7 @@ if(res_tipo === "Brahma/AW"){
 		
 	</head>
 	<body>
-<img class="portada" src="images/1340x900.jpg" alt="portada">
+<img class="portada" src="images/1340x900.jpg" alt="header">
 		<!-- Wrapper -->
 			<div id="wrapper">
 
