último commit antes de subirlo a github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Cálculo de Lineas Aereas</title>
+		<title>Cálculo de Líneas Aéreas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -1650,7 +1650,7 @@ if(res_tipo === "Brahma/AW"){
 						<div class="content">
 							<div class="inner">
 								<h1>Técnicas de Transporte de Energía</h1>
-								<p>Cálculo de Lineas Aereas</p>
+								<p>Cálculo de Líneas Aéreas</p>
 							</div>
 						</div>
 						<nav>
